Multi-column + static

--- a/config_sample.ini
+++ b/config_sample.ini
@@ -1,20 +1,27 @@
 [original]
 delimiter = ,
+LANGUAGE = EN
 
 [customer_info]
-file = customer_data.csv
-original_column = customer_id
-enrichment_column = cust_id
+file = .\sample\customer_data.csv
+original_columns = customer_id
+enrichment_columns = cust_id
 delimiter = ,
 
 [product_details]
-file = product_catalog.csv
-original_column = product_code
-enrichment_column = item_code
+file = .\sample\product_catalog.csv
+original_columns = product_code
+enrichment_columns = item_code
 delimiter = ;
 
 [supplier_info]
-file = supplier_data.csv
-original_column = supplier_id
-enrichment_column = vendor_id
+file = .\sample\supplier_data.csv
+original_columns = supplier_id
+enrichment_columns = vendor_id
+delimiter = ,
+
+[survey_select]
+file = .\sample\survey.csv
+original_columns = product_code, supplier_id
+enrichment_columns = item_code, vendor_id
 delimiter = ,
