Default values for mapping

--- a/config_sample.ini
+++ b/config_sample.ini
@@ -22,6 +22,6 @@ delimiter = ,
 
 [survey_select]
 file = .\sample\survey.csv
-original_columns = product_code, supplier_id
+original_columns = product_code::P101, supplier_id
 enrichment_columns = item_code, vendor_id
 delimiter = ,
